--- a/caretaker/admin/dashstyle.css
+++ b/caretaker/admin/dashstyle.css
@@ -261,7 +261,8 @@ letter-spacing: 3px;
 
 .report-container {
 min-height: 300px;
-max-width: 1200px;
+min-width: 1200px;
+max-width: 1300px;
 margin: 70px auto 0px auto;
 background-color: #ffffff;
 border-radius: 30px;
@@ -315,6 +316,8 @@ letter-spacing: 0px;
 .items {
 width: 1120px;
 margin-top: 15px;
+position:relative;
+left: 1.7em;
 }
 
 .item1 {
@@ -332,4 +335,15 @@ text-align: center;
 background-color: rgb(0, 177, 0);
 color: white;
 border-radius: 4px;
+}
+
+.label-tag-red {
+	background: red;
+}
+.label-tag-blue {
+	background: blue;
+
+}
+.label-tag-yellow {
+	background: rgb(144, 144, 35);
 }
